# ai-lessons

./: .gitignore  CONTRIBUTING.md  PLANNING.md  README.md  TECHNICAL.md  pyproject.toml
docs/contributing/resources/: README.md
docs/contributing/resources/examples/: api-reference.md  conceptual.md  how-to.md  troubleshooting.md
docs/implementation/v1/: design.md  search-workflow.md  specs.md
docs/implementation/v10-test-audit/: AUDIT.md  IMPLEMENTATION.md
docs/implementation/v2-resources/: AGENT.md  CHUNKING.md  agent-protocol.md  design.md  planning.md  search-workflow.md  specs.md
docs/implementation/v3-resource-linking/: PLANNING.md  SPECS.md
docs/implementation/v4-cleanup/: CODE_REVIEW.md  PLANNING.md
docs/implementation/v5-chunk-ids/: PLANNING.md  SPECS.md
docs/implementation/v6-cli-unification/: PLANNING.md  SPECS.md
docs/implementation/v7-cleanup/: IMPLEMENTATION.md
docs/implementation/v8-test-infrastructure/: IMPLEMENTATION.md
docs/implementation/v9-cli-cleanup/: IMPLEMENTATION.md  NOTES.2.md  NOTES.md
src/ai_lessons/: __init__.py  chunk_ids.py  chunking.py  cli.py  config.py  core.py  db.py  embeddings.py  links.py  mcp_server.py  schema.py  search.py  summaries.py
src/ai_lessons/cli/: __init__.py  admin.py  contribute.py  display.py  info.py  recall.py  utils.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_chunk_ids.py  test_chunking.py  test_core.py  test_db.py  test_edges.py  test_info.py  test_search.py
